fix(layout): navbar menu content overlapping
#400

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -85,6 +85,7 @@ img.thumbnail
         align-items: stretch
         display: flex
         padding: 0
+        flex-shrink: 0
     .navbar-menu
         flex-grow: 1
         flex-shrink: 0
